--- a/index.html
+++ b/index.html
@@ -547,7 +547,91 @@
             font-size: 0.9rem;
             color: var(--text-light);
         }
-        
+        /* สไตล์ Project Stats */
+.project-switch .btn-group .btn {
+    font-size: 0.85rem;
+    padding: 8px 5px;
+}
+
+.project-switch .btn.active {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.target-value-lg {
+    font-size: 2.5rem;
+    font-weight: 800;
+    line-height: 1;
+    margin-bottom: 5px;
+}
+
+.target-label-lg {
+    font-size: 0.9rem;
+    opacity: 0.9;
+}
+
+.target-value-sm {
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1;
+    margin-bottom: 3px;
+}
+
+.target-label-sm {
+    font-size: 0.7rem;
+    opacity: 0.8;
+}
+
+.project-name-badge .badge {
+    font-size: 0.8rem;
+    padding: 5px 12px;
+}
+
+/* สไตล์ความคืบหน้า */
+.progress-overview .progress {
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.progress-overview .progress-bar {
+    border-radius: 6px;
+}
+
+.progress-value {
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1;
+    margin-bottom: 5px;
+}
+
+.progress-label {
+    font-size: 0.8rem;
+    opacity: 0.9;
+}
+
+.progress-estimate small {
+    font-size: 0.75rem;
+    opacity: 0.9;
+}
+
+/* สไตล์สถิติ */
+.stat-subtext {
+    font-size: 0.75rem;
+    margin-top: 3px;
+    opacity: 0.7;
+}
+
+.stat-item-checked .stat-value {
+    color: #17a2b8 !important;
+}
+
+.stat-item-passed .stat-value {
+    color: #28a745 !important;
+}
+
+.stat-item-failed .stat-value {
+    color: #dc3545 !important;
+}
         /* Modal Styles */
         .modal-header {
             background: linear-gradient(to right, var(--primary-green), var(--secondary-green));
