--- a/index.html
+++ b/index.html
@@ -1177,6 +1177,7 @@
                             <h4 class="chart-title">
                                 <i class="fas fa-chart-pie me-2"></i>ผลการตรวจแปลงโครงการ
                                 <span class="badge bg-success ms-2" id="current-project-type-badge">ปลูกอ้อยในนา</span>
+                                  <span class="badge bg-success ms-2" id="current-project-type-badge">เปลี่ยนพืชอื่นมาปลูกอ้อย</span>
                             </h4>
                             <div class="pie-chart-wrapper">
                                 <canvas id="conditionPieChart"></canvas>
@@ -1200,7 +1201,7 @@
                                 <div class="chart-stat-item">
                                     <div class="chart-stat-value text-primary comma-number" id="total-count">0</div>
                                     <div class="chart-stat-label">ทั้งหมด</div>
-                                    <div class="stat-subtext text-primary">โครงการ</div>
+                                    <div class="stat-subtext text-primary">สมัครโครงการ</div>
                                 </div>
                             </div>
                             
