--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,10 @@
                             <h4 class="chart-title">
                                 <i class="fas fa-chart-pie me-2"></i>ผลการตรวจแปลงโครงการ
                                 <span class="badge bg-success ms-2" id="current-project-type-badge">ปลูกอ้อยในนา</span>
-                                  <span class="badge bg-success ms-2" id="current-project-type-badge">เปลี่ยนพืชอื่นมาปลูกอ้อย</span>
+                            </h4>
+                             <h4 class="chart-title">
+                                <i class="fas fa-chart-pie me-2"></i>ผลการตรวจแปลงโครงการ
+                                <span class="badge bg-success ms-2" id="current-project-type-badge">เปลี่ยนพืชอื่นมาปลูกอ้อย</span>
                             </h4>
                             <div class="pie-chart-wrapper">
                                 <canvas id="conditionPieChart"></canvas>
